--- a/CSS/beetle-lab.css
+++ b/CSS/beetle-lab.css
@@ -28,13 +28,14 @@
     
     
     padding: 0 235px 75px 60px;
+    box-sizing: border-box;
 }
 
 .r-list{
     position: fixed; 
     right: 30px;
     bottom: 140px;
-    top: 200px;
+    top: 150px;
  /*固定在視窗右邊70px 且不低於80+25+25+10px 才不會碰到footer和page botton*/
 
     background-color: rgb(93, 124, 113,0.5); /*視窗縮小時經過文字會透明化*/
@@ -220,4 +221,146 @@
     text-align: center;
 
     background-color: #949494;
+}
+
+/* rwd預備 */
+.rwd-main-content{
+    margin: 20px 0 30px;
+
+    display: none;
+}
+
+.rwd-main-content ul{
+    margin: 0 auto;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 40px;
+    
+}
+
+.rwd-main-content li{
+    text-align: center;
+    box-shadow: 0 0 10px #313e3a;
+    background-color: #455c54;
+    padding: 20px;
+    box-sizing: border-box;
+    width: 40%;
+    min-width: 300px;
+}
+
+.rwd-main-content a{
+    display: block;
+    text-decoration: none;
+    text-align: center;
+    color: #FFFF;
+    font-weight: bold;
+}
+
+.rwd-main-content h1{
+    font-size: 20px;
+    
+}
+
+.rwd-main-content h2{
+    text-align: end;
+    color: #bfd0c9;
+    font-size: 10px;
+
+    margin: 15px 0 10px;
+}
+
+.rwd-main-content p{
+    text-align: start;
+    font-weight: normal;
+    line-height: 1.5;
+    margin-bottom: 10px;
+    position: relative; 
+}
+
+.rwd-main-content p::before{
+    content: "More";
+    font-size: 1.1em;    
+
+    position: absolute;
+    right: 0;
+    bottom: 0;
+}
+
+/* 搜尋列 */
+
+.rwd-search{
+    display: flex;
+    align-items: center;
+    justify-content: end;
+    margin-right: 10%;
+
+    display: none;
+}
+
+.rwd-search button{
+    background: none;
+    border: none;
+    padding: 0;
+
+    cursor: pointer; /*維持滑鼠移動到按鈕上時可點擊的狀態*/
+}
+
+.rwd-search i{
+    margin-right: 10px;    
+}
+
+.rwd-search i:hover{
+    transform: scale(1.5);
+}
+
+
+.rwd-search input{
+    width: 110px;
+    height: 30px;
+
+    box-shadow: inset 0 4px 4px rgb(0,0,0,.3);
+}
+
+
+.rwd-main-content img{
+    width: 80%;
+    border-radius: 10px;
+}
+
+
+
+/* -----------------------1100px------------------ */
+@media (width <= 1100px) {
+.shell{
+        display: none;
+}
+
+.rwd-main-content{
+    display: block;
+}
+
+.rwd-search{
+    display: flex;
+}
+    
+    
+
+
+
+
+
+}
+
+/* -----------------------820px------------------ */
+@media (width <= 820px) {
+
+.breadcrumb{
+    margin: 0 auto;
+}
+
+.breadcrumb ol{   
+    justify-content: center;
+    font-size: 15px;
+}
 }
