--- a/CSS/login.css
+++ b/CSS/login.css
@@ -6,11 +6,12 @@
     border-radius: 50px;
     padding: 55px 0 50px;
     color: #FFFF;
+    font-size: clamp(0.8rem, 1rem, 1rem);
 }
 
 h1{
     text-align: center;
-    font-size: 40px;
+    font-size: clamp(1.5rem, 3vw, 2.5rem);
     font-weight: bold;
     margin-bottom: 35px;
 }
@@ -29,16 +30,18 @@ li{
 li>p{
     text-align: center;
     margin: 10px 0 10px;
-    font-size: 12px;
+    font-size: clamp(0.5rem, 0.75rem, 0.75rem);
 }
 
 input{
-    width: 250px;
+    width: 25%;
+    min-width: 150px;
     line-height: 1.6;
 }
 
 .content form>p{
     text-align: center;
+    font-size: clamp(0.5rem, 0.75rem, 0.75rem);
 }
 
 .button-box{
@@ -108,4 +111,65 @@ button:active{
     position: absolute;
     right: -10px;
     bottom: -50px;
+}
+
+/* -----------------------------1100px------------------------------ */
+@media (width <= 1100px) {
+    
+.forgot-password::before {
+    width: 206.25px;   /* 3/4 比例 */
+    height: 120.75px;  /* 3/4 比例 */
+}
+
+.forgot-password::after {
+    width: 325.5px;    /* 3/4 比例 */
+    height: 99.75px;   /* 3/4 比例 */
+}
+
+}
+
+/* -----------------------------855px------------------------------ */
+@media (width <= 855px) {
+ /* 1/2 比例 */
+.forgot-password::before {
+    width: 137.5px;
+    height: 80.5px;
+}
+
+.forgot-password::after {
+    width: 217px;
+    height: 66.5px;
+}
+}
+
+/* -----------------------------600px------------------------------ */
+@media (width <= 600px) {
+.forgot-password::before {
+    bottom: auto;
+    left: 35px;
+    top: -360px;
+
+    width: 91.5px;
+    height: 53px;
+}
+
+.forgot-password::after {
+    bottom: auto;
+    top: -360px;    
+
+    width: 144.5px;
+    height: 44px;
+}
+    
+}
+
+/* -----------------------------390px------------------------------ */
+@media (width <= 600px) {
+.forgot-password::before {
+    left: 0;
+}
+
+.forgot-password::after {
+    right: -30px;
+}   
 }
