--- a/CSS/order-completion.css
+++ b/CSS/order-completion.css
@@ -58,7 +58,7 @@
 
     position: absolute;
     right: 145px;
-    bottom: 0;
+    bottom: 40px;
 }
 
 .box p a{
@@ -95,4 +95,37 @@
 
 .social-button li:last-child{
     background-image: url(../img/img-order-completion/icon_IG.png);
+}
+
+/* -----------------------830px-------------------- */
+
+@media (width <= 830px) {
+.box p::after{
+    right: 300px;
+    bottom: 140px;
+}
+
+.box h1{
+    font-size: clamp(1rem, 1.5vw, 1.5rem);
+}
+
+.box p{
+    margin-top: 30px;
+}
+
+.box span, .box p{
+    font-size: clamp(0.5rem, 1vw, 1rem);
+}
+
+}
+
+/* -----------------------510px-------------------- */
+
+@media (width <= 510px) {
+.box p::after{
+right: 100px;
+
+
+
+}    
 }
