--- a/CSS/style.css
+++ b/CSS/style.css
@@ -179,7 +179,7 @@ img{
     justify-content:space-around;
 }
 
-.main-extra ul{
+.bottom-pic{
     display: flex;
     gap: 10px;
 }
@@ -262,6 +262,15 @@ img{
     letter-spacing:5px
 }
 
+
+/* RWD前置 */
+html{
+    position: relative;
+}
+
+.swiper{
+    display: none;
+}
 
 /* ------------------------820px----------------------- */
 @media (width <= 820px){
@@ -373,7 +382,7 @@ img{
     margin: 20px 0;
 }
 
-.main-extra ul{
+.bottom-pic{
     flex-wrap: wrap;
     justify-content: center;
     gap: 80px;
@@ -381,6 +390,70 @@ img{
 
 .main-extra img{
     opacity: 1;
+}
+
+/* 輪播器方案 */
+.middle-pic{
+    display: none;
+}
+
+.swiper {
+width: 100%;
+height: 100%;
+display: block;
+border-radius: 10px;
+}
+
+
+.swiper-slide {
+text-align: center;
+font-size: 18px;
+background: #fff;
+display: flex;
+justify-content: center;
+align-items: center;
+background-color: rgb(0,0,0,0);
+
+position: relative;
+}
+
+.swiper-slide img {
+display: block;
+width: 100%;
+height: 100%;
+object-fit: cover;
+}
+
+.swiper-slide::before{
+    /* content: ''; */
+    display: block;
+    width: 300px;
+    font-size: 20px;
+    color: white;
+    font-weight: bold;
+
+    position: absolute;
+    bottom: 10px;
+    left: 0;
+    right: 0;
+    margin: auto;
+}
+
+.slide1::before{
+    content: "日本大鍬 T-brand血統";   
+}
+.slide2::before{
+    content: "DHH長戟大兜 河野血統";   
+}
+.slide3::before{
+    content: "馬場黃金鬼鍬形蟲";   
+}
+.slide4::before{
+    content: "螃蟹鍬形蟲 喀麥隆產";   
+}
+
+.bottom-swiper{
+    display: none;
 }
 
 }
@@ -431,9 +504,35 @@ img{
         margin: 10px 0 10px;
     }
     
-    .main-extra ul {
+    .bottom-pic {
         gap: 20px;
     }
+
+.bottom-pic{
+    display: none;
+}
+
+.bottom-swiper{
+    display: block;
+    width: 70%;
+    margin-bottom: 30px;
+}
+
+.swiper-slide:first-child{
+    position: relative;
+}
+
+.bottom-swiper-wrapper:first-child::before{
+    content: "";
+    width: 100px;
+    height: 100px;
+    background-image: url(../img/image-index/picOfAward.png);
+    z-index: 1;
+    position: absolute;
+    bottom: 10px;
+    left: -10px;
+
+}
 
 }
 
@@ -448,6 +547,10 @@ img{
 }
 
 
+/* 輪播器方案 */
+.bottom-pic{
+    display: none;
+}
 }
 
 
