--- a/CSS/swiper-bundle.css
+++ b/CSS/swiper-bundle.css
@@ -273,7 +273,7 @@
   height: 45px;
   /* border: 1px solid; */
   border-radius: 50%;
-  background-color: #98b0a7;
+  background-color: rgb(152, 176, 167,0.4);
 }
 .swiper-button-prev.swiper-button-disabled,
 .swiper-button-next.swiper-button-disabled {
@@ -332,7 +332,7 @@
   height: 0;
   border-top: 10px solid transparent;
   border-bottom: 10px solid transparent;
-  border-right: 15px solid #2b3632;
+  border-right: 15px solid rgb(43, 54, 50,0.5);
   margin-right: 5px;
 }
 .swiper-button-next,
@@ -347,7 +347,8 @@
   height: 0;
   border-top: 10px solid transparent;
   border-bottom: 10px solid transparent;
-  border-left: 15px solid #2b3632;
+  border-left: 15px solid rgb(43, 54, 50,0.5);
+  margin-right: 5px;;
   margin-left: 5px;
 }
 
