--- a/CSS/news.css
+++ b/CSS/news.css
@@ -114,7 +114,7 @@ html {
 
   .swiper-slide {
     text-align: center;
-    font-size: 18px;
+    /* font-size: 18px; */
     background: #fff;
     display: flex;
     justify-content: center;
@@ -134,16 +134,15 @@ html {
 }
 
 .swiper-slide::before{
-    content: "";
     display: block;
     width: auto;
-    height: 30px;
     color: #FFFF;
-    font-size: 30px;
+    font-size: clamp(0.6rem, 3.5vw, 2rem);
     background-color: rgba(69, 92, 84, 0.6);
     border-radius: 10px;
     font-weight: bold;
     padding: 10px;
+    box-sizing: border-box;
     
     position: absolute;
     bottom: 10px;
