--- a/CSS/style.css
+++ b/CSS/style.css
@@ -194,7 +194,7 @@ img{
     position: relative;
 }
 /* 獎牌偽元素 */
-.main-extra li:first-child::before{
+.bottom-pic li:first-child::before{
     content: " ";
     width: 100px;
     height: 100px;
@@ -428,7 +428,7 @@ object-fit: cover;
     /* content: ''; */
     display: block;
     width: 300px;
-    font-size: 20px;
+    font-size: 4.5vw;
     color: white;
     font-weight: bold;
 
@@ -456,57 +456,91 @@ object-fit: cover;
     display: none;
 }
 
+/* 滑動提示 */
+#cover-middle{
+    z-index: 2;
+    border-radius: 1px solid;
+    background-color: #98b0a7;
+    width: 40%;
+    height: 100%;
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    opacity: 0.3;
+    pointer-events: none;
+
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+    transition: .2s;
+}
+
+.swiper #cover-middle .arrows{
+    pointer-events: none;
+}
+
+.swiper #cover-middle .arrows .arrow{
+    margin-left: 10%;
+    font-size: 2rem;
+    pointer-events: none;
+}
+
+
+
 }
 
 /* ------------------------600px----------------------- */
 @media (width <= 600px){
-    .main-title{
-        flex-direction: column;
-        align-items: center;
-    }
-    
-    .title-left h1{
-        font-size: 40px;
-        margin: 0;
-    }
-    
-    .title-left h2{
-        font-size: 20px;
-        margin: 10px 0 10px;
-        text-align: center;
-    }
-    
-    .main-title p{
-        font-size: 10px;
-        margin: 0;
-        text-align: center;
-        line-height: 20px;
-    }
-    
-    .main-title p{
-        font-size: 10px;
-        margin: 0;
-        text-align: center;
-        line-height: 20px;
-    }
-    
-    .content-title h1{
-        font-size: 30px;
-        letter-spacing: 10px;
-    }
-    
-    .content-title h1:before{
-        display: none;
-    }
-    
-    .content-title h2{
-        font-size: 15px;
-        margin: 10px 0 10px;
-    }
-    
-    .bottom-pic {
-        gap: 20px;
-    }
+.main-title{
+    flex-direction: column;
+    align-items: center;
+}
+
+.title-left h1{
+    font-size: 40px;
+    margin: 0;
+}
+
+.title-left h2{
+    font-size: 20px;
+    margin: 10px 0 10px;
+    text-align: center;
+}
+
+.main-title p{
+    font-size: 10px;
+    margin: 0;
+    text-align: center;
+    line-height: 20px;
+}
+
+.main-title p{
+    font-size: 10px;
+    margin: 0;
+    text-align: center;
+    line-height: 20px;
+}
+
+.content-title h1{
+    font-size: 30px;
+    letter-spacing: 10px;
+}
+
+.content-title h1:before{
+    display: none;
+}
+
+.content-title h2{
+    font-size: 15px;
+    margin: 10px 0 10px;
+}
+
+.bottom-pic {
+    gap: 20px;
+}
 
 .bottom-pic{
     display: none;
@@ -518,11 +552,11 @@ object-fit: cover;
     margin-bottom: 30px;
 }
 
-.swiper-slide:first-child{
+.pgkNo1:first-child{
     position: relative;
 }
 
-.bottom-swiper-wrapper:first-child::before{
+.pgkNo1::before{
     content: "";
     width: 100px;
     height: 100px;
@@ -530,14 +564,49 @@ object-fit: cover;
     z-index: 1;
     position: absolute;
     bottom: 10px;
-    left: -10px;
+    left: -80%;
 
 }
 
+/* 滑動提示 */
+#cover-extra{
+    z-index: 2;
+    border-radius: 1px solid;
+    background-color: #98b0a7;
+    width: 40%;
+    height: 100%;
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    opacity: 0.3;
+    pointer-events: none;
+
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+    transition: .2s;
+}
+
+.swiper #cover-extra .ex-arrows{
+    pointer-events: none;
+}
+
+.swiper #cover-extra .ex-arrows .ex-arrow{
+    margin-left: 10%;
+    font-size: 2rem;
+    pointer-events: none;
+    margin-bottom: 80px;
 }
 
 
 
+
+
+
+}
 
 /* ------------------------430px----------------------- */
 @media (width <= 430px){
@@ -551,10 +620,8 @@ object-fit: cover;
 .bottom-pic{
     display: none;
 }
+
 }
-
-
-
 
 
 
